@@ -21,4 +21,5 @@ t/11list_of_spans_eastern.t
 t/12set_of_spans_eastern.t
 t/13extrema.t
 t/14fatal.t
+t/15infinite_set.t
 eg/rome_1944
