@@ -132,3 +132,5 @@ Note on version conventions:
 
 1.07 xxx yyyy-mm-dd
         - Fixed POD issues and improve code formatting
+        - Improve code coverage.
+	- Allow building an infinite (i.e. unbounded) set of spans.
